完善首页编排、赛事荣誉与统一浅色门户 (#22)
## 改动概览

- 重构 Blog 首页：使用内置首图、赛事/校队标志、最多十二张滚动精选图片，以及最多三组、每组固定三篇的精选文章编排，移除旧动态横幅链路。
- 规范比赛与获奖记录：统一十个赛事分类和受约束奖档，补齐公开赛事列表/详情、文章关联、个人荣誉公开顺序及管理员七天回收站。
-
收敛双前端视觉与交互：固定浅色语义体系，保留暖黑文章目录，统一首页、赛事、阅读和发布页的米白画布与毛玻璃，并完善文章目录、训练查询和个人主页。
- 增加 V038～V041 数据库迁移，并同步更新部署、架构、接口、授权和模块文档。

## 影响范围

- 前端、Blog API 与数据库迁移需要同步发布，不能只替换单个服务。
- 旧动态首页横幅接口及管理入口退出运行范围。
- `V041` 会规范已有比赛奖档和个人展示顺序，升级前应按 `deploy/UPDATE.md` 备份数据库和上传目录。

## 验证

- `mvn clean test`
- `mvn clean verify`
- `mvn clean package -DskipTests`
- `./scripts/check-test-policy.sh`
- `pnpm lint && pnpm test && pnpm typecheck && pnpm build`（Training）
- `npm ci && npm test && npm run build`（Blog）
- `./scripts/check-doc-sync.sh origin/main WORKTREE`
- `git diff --check`

---------

Co-authored-by: huangbingrui <huangbingrui.awa@bytedance.com>